@@ -3,9 +3,12 @@
 {{readme}}
 
 [`git2`]: https://docs.rs/git2
-[`GitAuthenticator`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html
+[`GitAuthenticator`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html
+[`GitAuthenticator::new()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.new
+[`GitAuthenticator::default()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.default
+[`GitAuthenticator::new_empty()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.new_empty
 [`git2::Credentials`]: https://docs.rs/git2/latest/git2/type.Credentials.html
-[`GitAuthenticator::credentials()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.credentials
-[`GitAuthenticator::clone_repo()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.clone_repo
-[`GitAuthenticator::fetch()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.fetch
-[`GitAuthenticator::push()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.push
+[`GitAuthenticator::credentials()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.credentials
+[`GitAuthenticator::clone_repo()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.clone_repo
+[`GitAuthenticator::fetch()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.fetch
+[`GitAuthenticator::push()`]: https://docs.rs/auth-git2/latest/auth_git2/struct.GitAuthenticator.html#method.push
