@@ -1,3 +1,6 @@
+# Unreleased
+- [change][patch] Improve library level documentation and README.
+
 # Version 0.5.0 - 2023-09-06
 - [change][major] Rename `GitAuthenticator::clone()` to `clone_repo()` to avoid conflict with the `Clone` trait.
 
